js callbacks works: app runing image processing after button event

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 .container {}
-.content {}
+.content {
+    display: flex;
+    flex-direction: column;
+}
 .start-container {}  
 .result-container {}
