--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ button:hover {
 /* PURE JS */
 /* pure js processing need upgrade and fixes */
 .pure-js {
-    display: none;
+    /* display: none; */
 }
 #transformed-image-js {
     width: 300px !important;
